chore: frontend files

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Tennis scoreboard</title>
-    <link rel = stylesheet href = "../css/index.css">
     <script src="https://kit.fontawesome.com/fd9c503804.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href = "/css/index.css">
+
 </head>
 <body>
     <main>
         <h1>Tennis scoreboard</h1>
-        <a class = "button">New match</a>
-        <a class = "button">All matches</a>
+        <div class = "button" ><a class = button-link href="/new-match">New match</a></div>
+        <div class = "button" ><a class = button-link href="/new-match">All matches</a></div>
     </main>
     <div class="bg-image"></div>
     <footer>
