--- a/src/main/webapp/html/match-score.html
+++ b/src/main/webapp/html/match-score.html
@@ -12,7 +12,7 @@
         <h1 th:text = "${'Match '+uuid}">Match 230402934092</h1>
     </header>
 <main>
-
+    <div class="bg-image"></div>
     <div class = "scoreboard">
         <div class = "scores">
             <div class = "player-info">
@@ -31,6 +31,9 @@
                 <div class = "title">
                     Points
                 </div>
+                <div class = "title">
+                    
+                </div>
             </div>
             <div class = "player-info">
                 <div class = "cell" th:text="${player1Name}">
@@ -47,6 +50,8 @@
                 </div>
                 <div class = "cell" th:text="${player1Points}">
                     0
+                </div>
+                <div class = "advantage" th:class="'advantage '+${player1Advantage?'active':' '}">
                 </div>
 
             </div>
@@ -66,6 +71,8 @@
                 </div>
                 <div class = "cell" th:text="${player2Points}">
                     0
+                </div>
+                <div class = "advantage" th:class="'advantage '+${player2Advantage?'active':' '}">
                 </div>
 
             </div>
