chore: update html

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -11,7 +11,7 @@
     <main>
         <h1>Tennis scoreboard</h1>
         <div class = "button" ><a class = button-link href="/new-match">New match</a></div>
-        <div class = "button" ><a class = button-link href="/new-match">All matches</a></div>
+        <div class = "button" ><a class = button-link href="/matches">All matches</a></div>
     </main>
     <div class="bg-image"></div>
     <footer>
