--- a/src/main/webapp/html/match-score.html
+++ b/src/main/webapp/html/match-score.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <h1><a href = "/">Home</a></h1>
         <h1 th:text = "${'Match '+uuid}">Match 230402934092</h1>
     </header>
 <main>
