--- a/src/main/webapp/html/match-score.html
+++ b/src/main/webapp/html/match-score.html
@@ -37,51 +37,51 @@
                 </div>
             </div>
             <div class = "player-info">
-                <div class = "cell" th:text="${matchScore.player1.name}">
+                <div class = "cell" th:text="${matchScore.getFirstPlayerScore.name}">
                     Artem
                 </div>
-                <div class = "cell" th:text="${matchScore.player1.tieBreaksCounter}">
+                <div class = "cell" th:text="${matchScore.getFirstPlayerScore.tieBreaksCounter}">
                     0
                 </div>
-                <div class = "cell" th:text="${matchScore.player1.setCounter}">
+                <div class = "cell" th:text="${matchScore.getFirstPlayerScore.setCounter}">
                     0
                 </div>
-                <div class = "cell" th:text="${matchScore.player1.gameCounter}">
+                <div class = "cell" th:text="${matchScore.getFirstPlayerScore.gameCounter}">
                     0
                 </div>
-                <div class = "cell" th:text="${matchScore.getFormattedPoints(matchScore.player1.pointCounter)}">
+                <div class = "cell" th:text="${matchScore.getFormattedPoints(matchScore.getFirstPlayerScore.pointCounter)}">
                     0
                 </div>
-                <div class = "advantage" th:class="'advantage '+${matchScore.player1.isAdvantage()?'active':' '}">
+                <div class = "advantage" th:class="'advantage '+${matchScore.getFirstPlayerScore.isAdvantage()?'active':' '}">
                 </div>
 
             </div>
 
             <div class = "player-info">
-                <div class = "cell" th:text="${matchScore.player2.getName()}">
+                <div class = "cell" th:text="${matchScore.getSecondPlayerScore.getName()}">
                     Artem
                 </div>
-                <div class = "cell" th:text="${matchScore.player2.tieBreaksCounter}">
+                <div class = "cell" th:text="${matchScore.getSecondPlayerScore.tieBreaksCounter}">
                     0
                 </div>
-                <div class = "cell" th:text="${matchScore.player2.setCounter}">
+                <div class = "cell" th:text="${matchScore.getSecondPlayerScore.setCounter}">
                     0
                 </div>
-                <div class = "cell" th:text="${matchScore.player2.gameCounter}">
+                <div class = "cell" th:text="${matchScore.getSecondPlayerScore.gameCounter}">
                     0
                 </div>
-                <div class = "cell" th:text="${matchScore.getFormattedPoints(matchScore.player2.pointCounter)}">
+                <div class = "cell" th:text="${matchScore.getFormattedPoints(matchScore.getSecondPlayerScore.pointCounter)}">
                     0
                 </div>
-                <div class = "advantage" th:class="'advantage '+${matchScore.player2.isAdvantage()?'active':' '}">
+                <div class = "advantage" th:class="'advantage '+${matchScore.getSecondPlayerScore.isAdvantage()?'active':' '}">
                 </div>
 
             </div>
         </div>
 
         <form method="post" name="win-buttons" th:action="@{/match-score(uuid=${matchScore.uuid})}">
-            <button type="submit" name="id" th:value="${matchScore.player1.id}" th:text="${matchScore.player1.name}">Artem</button>
-            <button type="submit" name="id" th:value="${matchScore.player2.id}" th:text="${matchScore.player2.name}">Vasya</button>
+            <button type="submit" name="id" th:value="${matchScore.getFirstPlayerScore.id}" th:text="${matchScore.getFirstPlayerScore.name}">Artem</button>
+            <button type="submit" name="id" th:value="${matchScore.getSecondPlayerScore.id}" th:text="${matchScore.getSecondPlayerScore.name}">Vasya</button>
         </form>
     </div>
 </main>
