chore: update frontend

--- a/src/main/webapp/html/finishedMatch.html
+++ b/src/main/webapp/html/finishedMatch.html
@@ -15,7 +15,7 @@
 <main>
     <div class="bg-image"></div>
     <div class = "scoreboard">
-        <h1 th:text = "${'Winner: '+winner}"></h1>
+        <h1 th:text = "${'Winner: '+winner}">Winner: Abobus</h1>
     </div>
 </main>
 </body>
