--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Tennis scoreboard</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <script src="https://kit.fontawesome.com/fd9c503804.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href = "/css/index.css">
 
