--- a/src/main/webapp/html/match-score.html
+++ b/src/main/webapp/html/match-score.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Tennis scoreboard</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <script src="https://kit.fontawesome.com/fd9c503804.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/match-score.css">
 
 </head>
 <body>
     <header>
-        <h1><a href = "/">Home</a></h1>
+        <h1><a href = "/"><i class="fa-solid fa-house"></i></a></h1>
         <h1 th:text = "${'Match '+matchScore.uuid}">Match 230402934092</h1>
     </header>
 <main>
@@ -59,7 +61,7 @@
 
             <div class = "player-info">
                 <div class = "cell" th:text="${matchScore.getSecondPlayerScore.getName()}">
-                    Artem
+                    NOVAK JOKOVIC
                 </div>
                 <div class = "cell" th:text="${matchScore.getSecondPlayerScore.tieBreaksCounter}">
                     0
