--- a/src/main/webapp/html/matches.html
+++ b/src/main/webapp/html/matches.html
@@ -2,6 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Tennis scoreboard</title>
     <script src="https://kit.fontawesome.com/fd9c503804.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/matches.css">
@@ -9,7 +11,7 @@
 </head>
 <body>
 <header>
-    <h1><a href = "/">Home</a></h1>
+    <h1><a href = "/"><i class="fa-solid fa-house"></i></a></h1>
     <h1>All matches</h1>
 </header>
 <main>
@@ -35,7 +37,7 @@
         </tr>
         
     </table>
-    <p th:text="${error}">Invalid player name</p>
+    <p class = "error" th:text="${error}">Invalid player name</p>
     <div class = "pages">
         <ul>
             <li th:each="i : ${#numbers.sequence(1, numberOfPages)}">
