--- a/src/main/webapp/html/new-match.html
+++ b/src/main/webapp/html/new-match.html
@@ -2,13 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tennis scoreboard</title>
     <script src="https://kit.fontawesome.com/fd9c503804.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href = "/css/new-match.css">
 </head>
 <body>
     <header>
-        <a href = "/">Home</a>
+        <a href = "/"><i class="fa-solid fa-house"></i></a>
         <p>New match</p>
     </header>
     <main>
