--- a/src/main/webapp/html/match-score.html
+++ b/src/main/webapp/html/match-score.html
@@ -1,89 +1,95 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Tennis scoreboard</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
 
-    <script src="https://kit.fontawesome.com/fd9c503804.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/match-score.css">
+    <script crossorigin="anonymous" src="https://kit.fontawesome.com/fd9c503804.js"></script>
+    <link href="/css/match-score.css" rel="stylesheet">
 
 </head>
 <body>
-    <header>
-        <h1><a href = "/"><i class="fa-solid fa-house"></i></a></h1>
-        <h1 th:text = "${'Match '+matchScore.uuid}">Match 230402934092</h1>
-    </header>
+<header>
+    <h1><a href="/"><i class="fa-solid fa-house"></i></a></h1>
+    <h1 th:text="${'Match '+matchScore.uuid}">Match 230402934092</h1>
+</header>
 <main>
     <div class="bg-image"></div>
-    <div class = "scoreboard">
-        <div class = "scores">
-            <div class = "player-info">
-                <div class = "title">
-                     
+    <div class="scoreboard">
+        <div class="scores">
+            <div class="player-info">
+                <div class="title">
+
                 </div>
-                <div class = "title">
+                <div class="title">
                     Tie breaks
                 </div>
-                <div class = "title" >
+                <div class="title">
                     Sets
                 </div>
-                <div class = "title">
+                <div class="title">
                     Games
                 </div>
-                <div class = "title">
+                <div class="title">
                     Points
                 </div>
-                <div class = "title">
-                    
+                <div class="title">
+
                 </div>
             </div>
-            <div class = "player-info">
-                <div class = "cell" th:text="${matchScore.getFirstPlayerScore.name}">
+            <div class="player-info">
+                <div class="cell" th:text="${matchScore.getFirstPlayerScore.name}">
                     Artem
                 </div>
-                <div class = "cell" th:text="${matchScore.getFirstPlayerScore.tieBreaksCounter}">
+                <div class="cell" th:text="${matchScore.getFirstPlayerScore.tieBreaksCounter}">
                     0
                 </div>
-                <div class = "cell" th:text="${matchScore.getFirstPlayerScore.setCounter}">
+                <div class="cell" th:text="${matchScore.getFirstPlayerScore.setCounter}">
                     0
                 </div>
-                <div class = "cell" th:text="${matchScore.getFirstPlayerScore.gameCounter}">
+                <div class="cell" th:text="${matchScore.getFirstPlayerScore.gameCounter}">
                     0
                 </div>
-                <div class = "cell" th:text="${matchScore.getFormattedPoints(matchScore.getFirstPlayerScore.pointCounter)}">
+                <div class="cell" th:text="${matchScore.getFirstPlayerScore.pointCounter}">
                     0
                 </div>
-                <div class = "advantage" th:class="'advantage '+${matchScore.getFirstPlayerScore.isAdvantage()?'active':' '}">
+                <div class="advantage"
+                     th:class="'advantage '+${matchScore.getFirstPlayerScore.isAdvantage()?'active':' '}">
                 </div>
 
             </div>
 
-            <div class = "player-info">
-                <div class = "cell" th:text="${matchScore.getSecondPlayerScore.getName()}">
+            <div class="player-info">
+                <div class="cell" th:text="${matchScore.getSecondPlayerScore.getName()}">
                     NOVAK JOKOVIC
                 </div>
-                <div class = "cell" th:text="${matchScore.getSecondPlayerScore.tieBreaksCounter}">
+                <div class="cell" th:text="${matchScore.getSecondPlayerScore.tieBreaksCounter}">
                     0
                 </div>
-                <div class = "cell" th:text="${matchScore.getSecondPlayerScore.setCounter}">
+                <div class="cell" th:text="${matchScore.getSecondPlayerScore.setCounter}">
                     0
                 </div>
-                <div class = "cell" th:text="${matchScore.getSecondPlayerScore.gameCounter}">
+                <div class="cell" th:text="${matchScore.getSecondPlayerScore.gameCounter}">
                     0
                 </div>
-                <div class = "cell" th:text="${matchScore.getFormattedPoints(matchScore.getSecondPlayerScore.pointCounter)}">
+                <div class="cell" th:text="${matchScore.getSecondPlayerScore.pointCounter}">
                     0
                 </div>
-                <div class = "advantage" th:class="'advantage '+${matchScore.getSecondPlayerScore.isAdvantage()?'active':' '}">
+                <div class="advantage"
+                     th:class="'advantage '+${matchScore.getSecondPlayerScore.isAdvantage()?'active':' '}">
                 </div>
 
             </div>
         </div>
 
         <form method="post" name="win-buttons" th:action="@{/match-score(uuid=${matchScore.uuid})}">
-            <button type="submit" name="id" th:value="${matchScore.getFirstPlayerScore.id}" th:text="${matchScore.getFirstPlayerScore.name}">Artem</button>
-            <button type="submit" name="id" th:value="${matchScore.getSecondPlayerScore.id}" th:text="${matchScore.getSecondPlayerScore.name}">Vasya</button>
+            <button name="id" th:text="${matchScore.getFirstPlayerScore.name}" th:value="${matchScore.getFirstPlayerScore.id}"
+                    type="submit">Artem
+            </button>
+            <button name="id" th:text="${matchScore.getSecondPlayerScore.name}" th:value="${matchScore.getSecondPlayerScore.id}"
+                    type="submit">Vasya
+            </button>
         </form>
     </div>
 </main>
